# deepl-tr-async

./: .coverage  .coveragerc  .env1  README.md  coverage.xml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.github/workflows/: build.yml  codecov.yml  codecov_workflow.yml  codeql-analysis.yml  python3637package.yml
deepl_tr_async/: __init__.py  __main__.py  deepl_langpair.py  deepl_tr_async.py  detect_lang.py  google_langpair.py  google_tr_async.py  load_env.py
tests/: google_tr_pp.py  limited_as_completed.py  test_deepl_tr_async.py  test_detect_lang.py  test_google_tr_async.py
